# ocr_system

./: .gitignore  README.md  app.py  helpers.py  main.py  ocr_demo.db  ocr_notebook.ipynb  ocr_system.db  orm_models.py  relational_tables_readme.md  requirements.txt  setup.cfg  streamlit_app.py  your_helpers.py
.github/workflows/: ci-cd.yml  ci.yml
ocr_system/: __init__.py  cli_streamlit.py  helpers.py  main.py
tests/: test_basic.py
