[metadata]
name = ocr_system
version = 0.1.0
author = JL
author_email = author_email
description = A Streamlit-based OCR app using PaddleOCR
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Athrun-kkk/ocr_system
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    paddlepaddle==3.0.0
    paddleocr[all]
    matplotlib
    SQLAlchemy
    streamlit
    
[options.entry_points]
console_scripts =
    ocr-cli = ocr_system.main:cli
    ocr-streamlit = ocr_system.cli_streamlit:main
